app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */



p {
    text-align: center;
    padding-right: 10%;
    padding-left: 10%;
}

h2,h3,h4,h5,h6 {
    text-align: center;

}


div.sidebar_2 {
    float:left;
    min-width: 185px;
    height: 1000px;

}


div.sidebar {
    float:right;
    min-width: 200px;
    height: 1000px;
      img {
       float:right;
       padding-right: 40px;
      h1  {


      }
   }
}


div.sidebar_about {
    float:right;
    min-width: 200px;
    height: 900px;
      img {
       float:right;
       padding-right: 40px;
      h1  {


      }  
   }
}


div.youtube {
    text-align: center;
    padding-top: 35px;

}



div.resume_center_image_1{
    text-align: center;
    padding-bottom: 100px;
    img {
        border-radius: 20px;
    }
     }

 div.resume_center_image_2{
    text-align: center;
    padding-bottom: 100px;
    img {
        border-radius: 20px;
    }
     }

 div.resume_center_image_3{
    text-align: center;
    padding-bottom: 100px;
    img {
        border-radius: 20px;
    }
     }



div.home_center_image{
  
    padding-bottom: 40px;
    padding-left: 235px;
    img {
        margin-right: auto;
        margin-left: auto;
        border-radius: 20px;
    }
     }


div.center_image_about{
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 100px;
    padding-left: 235px;
    img {
        
        border-radius: 20px;
    }
     }



 div.arrow_text{
margin-left: auto;
margin-right: auto;
padding-left: 350px;

   img { 
    margin-bottom: 15px;
    margin-left: 260px;
  
}
 }


div.h4_home_text {
     text-align: center;
     padding-bottom: 30px;

}


#container {

    min-height: 100%;
    position: relative;

}

body {

    background-color: #FFFFFF;
    margin: 0;
    width: 100%;
    height: 100%;
}
   


 a {
    text-align: center;
    color:green;
 }

#resume_text {
    padding-left: 100px;
    padding-right: 100px;
    a {
    float: right;
    color:green;
 }
}

